<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bgg"
    tools:context=".Activity5">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="5dp"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/imageView3"
            android:paddingTop="200dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:adjustViewBounds="true"
            android:contentDescription="@string/di1"
            android:cropToPadding="true"
            app:srcCompat="@drawable/sin" />

        <ImageView
            android:id="@+id/imageView2"
            android:paddingTop="20dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:adjustViewBounds="true"
            android:contentDescription="@string/di2"
            android:cropToPadding="true"
            app:srcCompat="@drawable/cos" />

        <ImageView
            android:id="@+id/imageView4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:adjustViewBounds="true"
            android:contentDescription="@string/di3"
            android:cropToPadding="true"
            android:paddingTop="20dp"
            app:srcCompat="@drawable/tan" />

        <ImageView
            android:id="@+id/imageView5"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:adjustViewBounds="true"
            android:contentDescription="@string/di4"
            android:cropToPadding="true"
            android:paddingTop="20dp"
            app:srcCompat="@drawable/sec" />
        <ImageView
            android:id="@+id/imageView6"
            android:paddingTop="20dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:adjustViewBounds="true"
            android:contentDescription="@string/di5"
            android:cropToPadding="true"
            app:srcCompat="@drawable/cosec"/>
        <ImageView
            android:id="@+id/imageView7"
            android:paddingTop="20dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:adjustViewBounds="true"
            android:contentDescription="@string/di5"
            android:cropToPadding="true"
            app:srcCompat="@drawable/cot"/>
    </LinearLayout>
</ScrollView>