<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bgg"
    tools:context=".Activity6">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="10dp"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/imageView3"
            android:paddingTop="200dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:adjustViewBounds="true"
            android:contentDescription="@string/di1"
            android:cropToPadding="true"
            app:srcCompat="@drawable/sinsadarana" />

        <ImageView
            android:id="@+id/imageView2"
            android:paddingTop="20dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:adjustViewBounds="true"
            android:contentDescription="@string/di2"
            android:cropToPadding="true"
            app:srcCompat="@drawable/cossadarana" />

        <ImageView
            android:id="@+id/imageView4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:adjustViewBounds="true"
            android:contentDescription="@string/di3"
            android:cropToPadding="true"
            android:paddingTop="20dp"
            app:srcCompat="@drawable/tansadarana" />


    </LinearLayout>
</ScrollView>